[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "minimalmodbus"
description = "Easy-to-use Modbus RTU and Modbus ASCII implementation for Python"
readme = "README.rst"
requires-python = ">=3.8"
authors = [ {name = "Jonas Berg"} ]
license = {file = "LICENSE"}
keywords = [
    "minimalmodbus",
    "modbus",
    "modbus-serial",
    "modbus-RTU",
    "modbus-ASCII",
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Terminals :: Serial",
]
dependencies = [
  "pyserial>=3.0",
]

[project.urls]
Homepage = "https://github.com/pyhys/minimalmodbus"
Documentation = "https://minimalmodbus.readthedocs.io"
Changelog = "https://github.com/pyhys/minimalmodbus/blob/master/HISTORY.rst"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

[tool.pylint.format]
max-line-length = "88"

[tool.coverage.run]
branch = true
include = ["*", "tests/*"]
omit = ["*/.local/*", "*opt*", "*site-packages*", "*eggs*"]

[tool.coverage.report]
show_missing = true
ignore_errors = true
precision = 1
exclude_lines = ["pragma: no cover"]
include = ["*", "tests/*"]
omit = ["/usr/*", "*opt*", "*site-packages*", "*eggs*"]