[metadata]
name = minimalmodbus
version = attr: minimalmodbus.__version__
author = Jonas Berg
description = Easy-to-use Modbus RTU and Modbus ASCII implementation for Python
keywords = 
    minimalmodbus 
    modbus 
    modbus-serial 
    modbus-RTU 
    modbus-ASCII
license = Apache License, Version 2.0
# Use default value for license_files
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pyhys/minimalmodbus
project_urls =
    Bug Tracker = https://github.com/pyhys/minimalmodbus/issues
    Documentation = https://minimalmodbus.readthedocs.io
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: Manufacturing
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Communications
    Topic :: Home Automation
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Hardware :: Hardware Drivers
    Topic :: Terminals :: Serial

[options]
py_modules = minimalmodbus
include_package_data = True
python_requires = >=3.6
install_requires =
    pyserial>=3.0

[flake8]
# TODO Modify comment lines to match the default black line length 88
max-line-length = 100
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,